<resources>
    <!-- ./common -->
    <string name="app_name">CDP - Carteirinha Digital do seu Pet</string>
    <string name="title_activity_auth">Authentication</string>
    <string name="title_activity_home">Home</string>

    <!-- ./menu -->
    <string name="title_splash">Splash Screen</string>
    <string name="title_login">Sign in</string>
    <string name="title_register">Sign up</string>

    <!-- ./Splash Screen -->
    <string name="splash_loading">Loading environment…</string>

    <!-- ./Register Screen -->
    <string name="redirect_to_sign_in">Already have an account? Sign in!</string>
    <string name="hint_email" translatable="false">E-mail</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_success">Sign up is complete!</string>

    <!-- ./Login -->
    <string name="redirect_to_sign_up">No account? Sign up!</string>

    <!-- ./Auth Errors -->
    <string name="invalid_email">Not a valid e-mail</string>
    <string name="invalid_name">Name must be at least 5 characters long</string>
    <string name="invalid_password">Password must be at least 5 characters long</string>
    <string name="sign_in_failed">Sign In failed</string>
    <string name="sign_up_failed">Sign Up failed</string>
</resources>