<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_navigation"
    app:startDestination="@+id/nav_splash">

    <fragment
        android:id="@+id/nav_splash"
        android:name="you.thiago.cdp.ui.authentication.splash.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_nav_splash_to_nav_register"
            app:destination="@id/nav_register" />

    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="you.thiago.cdp.ui.authentication.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >

        <action
            android:id="@+id/action_nav_register_to_nav_login"
            app:destination="@id/nav_login" />

    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="you.thiago.cdp.ui.authentication.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login"/>

</navigation>